--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://www.salosolucoes.com.br/Estilo/Css/index.css">
         <title>Alphine agiotas</title>
     </head>
     <body>
-        
+        <p class="TextoAcentuado">Ola</p>
     </body>
 </html>
