--- a/index.html
+++ b/index.html
@@ -4,10 +4,39 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://www.salosolucoes.com.br/Estilo/Css/index.css">
-        <title>Alphine agiotas</title>
+        <link rel="stylesheet" href="https://www.salosolucoes.com.br/Estilo/Css/Layout.css">
+        <link rel="stylesheet" href="https://www.salosolucoes.com.br/Estilo/Css/Colors.css">
+        <link rel="shortcut icon" href="./100x100.png" type="image/x-icon">
+        <title>Bem vindo ao Alphine</title>
     </head>
     <body>
-        <p class="TextoAcentuado">Ola</p>
+        <section class="Corpo white Alinhado" id="Equipe">
+            <div class="Conteudo">
+                
+                
+                <linha></linha>
+                    <div>
+                        <img src="./100x100.png">
+                        <linha></linha>
+                        <h1 class="cBlack">Alphine <a class="cblue">1.0.0</a></h1>
+                        <linha></linha>
+                        <p>
+                            Olá meu nome é <strong>Michel Anderson</strong>, sou desenvolvedor e criador do alphine.<br> 
+                            trabalhar com planilhas ajuda muito, mas já pensou na praticidade de um programa só para "Agiotas"<br>
+                            kk palavra feia somos apenas emprestadores de dinheiro, enfim fiz esse programa para ajudar<br> 
+                            quem esta entrando no ramo, espero que seja útil, é totalmente gratuito e os dados ficam somente na sua maquina,<br>
+                            mas se quiser me ajudar com um troquinho tem meu pix logo abaixo, Obrigado e bons negócios!
+                        </p>
+                        <linha></linha>
+                        <button class="Botao Primario">Baixar</button>
+                        <linha></linha>
+                        <p><strong>Mande um pix e me ajude a pagar um café</strong></p>
+                        <img src="./Pix.png" style="width: 250px;">
+                    </div>
+                <linha></linha>
+                <linha></linha>
+                <div class="Fundos"></div>
+            </div>
+        </section>
     </body>
 </html>
