--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             mas se quiser me ajudar com um troquinho tem meu pix logo abaixo, Obrigado e bons negócios!
                         </p>
                         <linha></linha>
-                        <button class="Botao Primario">Baixar</button>
+                        <button type="submit" onclick="window.open('Alphine 1.0.0.zip')" class="Botao Primario">Baixar</button>
                         <linha></linha>
                         <p><strong>Mande um pix e me ajude a pagar um café</strong></p>
                         <img src="./Pix.png" style="width: 250px;">
